k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  selector:
    component: postgres
  type: ClusterIP
  ports:
  - name:  postgres-port
    port:  5432
    targetPort:  5432
