k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  redis-cluster-ip-service
spec:
  type:  ClusterIP
  selector:
    component: redis
  ports:
  # No nodePort here because it is not accessible from the outside world
  - name:  redis-port
    port:  6379
    targetPort:  6379
