k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  server-cluster-ip-service
spec:
  type:  ClusterIP
  selector:
    component: server
  ports:
  # No nodePort here because it is not accessible from the outside world
  - name:  server-port
    port:  5000
    targetPort:  5000
